//  Copyright 2022 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// LIVE_SNIPPET_BLOCK_1_START
syntax = "proto3";

package sealed.decrypt_and_echo;

service DecryptAndEchoService {
  // Decrypts a ciphertext encrypted to the sealed job public key and returns
  // the plaintext.
  // Note: this is intended to only smoke-test encrypting to the sealed job.
  // Real applications should not use this as the response contains the
  // plaintext in the clear.
  rpc DecryptAndEcho(DecryptAndEchoRequest) returns (DecryptAndEchoResponse) {}
}

message DecryptAndEchoRequest {
  // A ciphertext encrypted to the sealed job public key.
  string ciphertext = 1;
}

message DecryptAndEchoResponse {
  // Plaintext value associated with ciphertext in the request.
  string plaintext = 1;
}
// LIVE_SNIPPET_BLOCK_1_END
