//  Copyright 2022 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// LIVE_SNIPPET_BLOCK_1_START
syntax = "proto3";

package sealed.echo;

service EchoService {
  // Echoes back a given string request as response.
  // This is intended to smoke-test an end-to-end connection to the sealed
  // application and/or policy.
  rpc Echo(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
  string request = 1;
}

message EchoResponse {
  string response = 1;
}
// LIVE_SNIPPET_BLOCK_1_END
